@@ -1,3 +1,4 @@
+	- add support to clearer #26
 	- add support to predicate #11
 	- add support to handle more than one attribute #2
 
